fix: use String.formatted() instead of String.format() (modernizer)